# backend-medical

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  env.example  env_example.txt  init_db.sql  pyproject.toml  railway.json  railway_init.sh  test_railway_db.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  31076e8e3f1c_add_gems_and_gem_documents.py  3db92f588475_add_note_embeddings_table.py  57110c42edff_add_official_documents_and_embeddings_.py  8727e7fb4ae0_add_documents_and_document_embeddings.py  a9167f23d1a9_add_calendars_and_calendar_events.py  b4803692e83f_add_conversations_and_messages.py  cfd74c38ad07_add_preceptor_to_calendar_events.py  dc13711e7492_add_notes_table.py
app/: __init__.py  main.py
app/agents/: __init__.py  agent_graph.py  base_agent.py  calendar_organizer.py  gem_agent.py  medical_assistant.py  note_analyzer.py
app/config/: __init__.py  database.py  settings.py
app/core/: __init__.py  dependencies.py  security.py
app/database/: __init__.py
app/models/: __init__.py  calendar.py  conversation.py  document.py  document_embedding.py  gem.py  message.py  note.py  note_embedding.py  official_document.py  official_document_embedding.py  user.py
app/official_sources/: __init__.py  downloader.py  indexer.py
app/schemas/: __init__.py  agent.py  auth.py  calendar.py  conversation.py  gem.py  note.py  rag.py  user.py
app/services/: auth_service.py  document_generator.py  embedding_service.py  gem_rag_service.py  hybrid_rag_service.py  note_service.py  rag_optimizer.py  rag_service.py
tests/: conftest.py  test_agents.py  test_auth.py  test_main.py  test_notes.py  test_rag.py
(+12 files in other folders)
